--- a/dashboard-profile.html
+++ b/dashboard-profile.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Dashboard</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
@@ -102,30 +102,27 @@
                         </div>
                         <div class="col-12 p-0 mb-5">
                             <p class="besar">Riwayat Pendidikan</p>
-                            <p>Graduate Vocational School Major Computer and Information System</p>
+                            <p>Sekolah Menengah Kejuruan</p>
+                            <p>SMK 2 Sleman</p>
                         </div>
                         <div class="col-12 p-0 mb-5">
                             <p class="besar">Lokasi</p>
-                            <p>DKI Jakarta</p>
+                            <p>Daerah Istimewa Yogyakarta</p>
                         </div>
                         <div class="col-12 p-0 mb-5">
                             <p class="besar">Pengalaman Organisasi</p>
-                            <p>OSIS SMK Telkom</p>
-                            <p>Digital Art Community</p>
-                            <p>Developer Jaksel</p>
+                            <p>OSIS SMK 2 Sleman</p>
                         </div>
                         <div class="col-12 p-0">
                             <p class="besar">Penghargaan & Pencapaian</p>
-                            <p>Juara 1 Web Design Competition</p>
-                            <p>SMK Telkom Best Student</p>
-                            <p>3rd Business Idea Competition</p>
+                            <p>Siswa Teladan SMK 2 Sleman</p>
                         </div>
                     </div>
                     <div class="col-8 kanan">
                         <div class="col-12 p-0 mb-5">
                             <div class="row">
                                 <div class="col-9">
-                                    <p class="nama"><b>Bambang Baskoro</b></p>
+                                    <p class="nama"><b>Jenri Dewany</b></p>
                                 </div>
                                 <div class="col-3 text-right my-auto">
                                     <a href="edit-profile.html" class="btn btnghost">Edit Profil</a>
@@ -144,7 +141,7 @@
                                     <a class="nav-link" href="#">UI / UX</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Business Analyst</a>
+                                    <a class="nav-link" href="#">Fullstack Programmer</a>
                                 </li>
                             </ul>
                         </div>
@@ -155,42 +152,48 @@
                                     <p class="besar">Rekomendasi Pekerjaan Untuk Anda</p>
                                 </div>
                                 <div class="col-4 text-right my-auto">
-                                    <button class="btn btnghost">Telusuri Pekerjaan Lain</button>
+                                    <a href="cari-kerja.html" class="btn btnghost">Telusuri Pekerjaan Lain</a>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-4">
                                     <div class="card">
-                                        <img src="img/dashboard-card.svg" class="card-img-top" alt="...">
-                                        <div class="card-body">
+                                        <img src="img/header-card1.svg" class="card-img-top" alt="...">
+                                        <div class="card-body pb-0">
                                             <p class="besar">Web Programmer</p>
                                             <p class="mb-3">Nama Instansi</p>
                                             <p>DKI Jakarta</p>
-                                            <button class="btn btn-block mt-3 disabled">Proposal Telah Dikirim</button>
+                                        </div>
+                                        <div class="card-footer pt-0">
+                                            <a class="btn btn-block mt-3">Daftar Sekarang</a>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="col-4">
                                     <div class="card">
-                                        <img src="img/dashboard-card.svg" class="card-img-top" alt="...">
-                                        <div class="card-body">
+                                        <img src="img/header-card2.svg" class="card-img-top" alt="...">
+                                        <div class="card-body pb-0">
                                             <p class="besar">Web Programmer</p>
                                             <p class="mb-3">Nama Instansi</p>
                                             <p>DKI Jakarta</p>
-                                            <button class="btn btn-block mt-3">Kirim Proposal</button>
+                                        </div>
+                                        <div class="card-footer pt-0">
+                                            <a class="btn btn-block mt-3">Daftar Sekarang</a>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="col-4">
                                     <div class="card">
-                                        <img src="img/dashboard-card.svg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <p class="besar">Web Programmer</p>
-                                            <p class="mb-3">Nama Instansi</p>
-                                            <p>DKI Jakarta</p>
-                                            <button class="btn btn-block mt-3 disabled">Proposal Telah Dikirim</button>
+                                        <img src="img/header-card3.svg" class="card-img-top" alt="...">
+                                        <div class="card-body pb-0">
+                                            <p class="besar">System Developer</p>
+                                            <p class="mb-3">Lattice Teknologi Mandiri</p>
+                                            <p>Jawa Barat</p>
+                                        </div>
+                                        <div class="card-footer pt-0">
+                                            <a class="btn btn-block mt-3">Daftar Sekarang</a>
                                         </div>
                                     </div>
                                 </div>
@@ -248,47 +251,47 @@
                         <div class="col-12 p-0 last">
                             <p class="besar mb-3">Riwayat Pendidikan</p>
                             <div class="row mb-2">
-                                <div class="col-2 my-auto">
-                                    <p class="besar"><b>2019</b></p>
-                                </div>
                                 <div class="col-4 my-auto">
-                                    <p>SMK Jaya Baru</p>
+                                    <p>SMK 2 Sleman Yogyakarta</p>
                                 </div>
                                 <div class="col-2 my-auto">
                                     <p>SMK</p>
                                 </div>
-                                <div class="col-4 my-auto">
-                                    <p>2010 - 2013</p>
+                                <div class="col-3 my-auto my-auto">
+                                    <p class="sertif"><img src="img/download-icon.svg" alt="">Ijazah/Sertifikat</p>
+                                </div>
+                                <div class="col-3 my-auto">
+                                    <p>2019 - Sekarang</p>
                                 </div>
                             </div>
 
                             <div class="row mb-2">
-                                <div class="col-2 my-auto">
-                                    <p class="besar"><b>2018</b></p>
-                                </div>
                                 <div class="col-4 my-auto">
-                                    <p>SD Tak Pernah Menyerah</p>
+                                    <p>SMP 1 Sleman</p>
+                                </div>
+                                <div class="col-2 my-auto">
+                                    <p>SMP</p>
+                                </div>
+                                <div class="col-3 my-auto my-auto">
+                                    <p class="sertif"><img src="img/download-icon.svg" alt="">Ijazah/Sertifikat</p>
+                                </div>
+                                <div class="col-3 my-auto">
+                                    <p>2016 - 2019</p>
+                                </div>
+                            </div>
+
+                            <div class="row mb-2">
+                                <div class="col-4 my-auto">
+                                    <p>SD Ambarrukmo</p>
                                 </div>
                                 <div class="col-2 my-auto">
                                     <p>SD</p>
                                 </div>
-                                <div class="col-4 my-auto">
-                                    <p>2005 - 2010</p>
+                                <div class="col-3 my-auto my-auto">
+                                    <p class="sertif"><img src="img/download-icon.svg" alt="">Ijazah/Sertifikat</p>
                                 </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-2 my-auto">
-                                    <p class="besar"><b>2017</b></p>
-                                </div>
-                                <div class="col-4 my-auto">
-                                    <p>TK Pengawalan</p>
-                                </div>
-                                <div class="col-2 my-auto">
-                                    <p>TK</p>
-                                </div>
-                                <div class="col-4 my-auto">
-                                    <p>2002 - 2006</p>
+                                <div class="col-3 my-auto">
+                                    <p>2010 - 2016</p>
                                 </div>
                             </div>
                         </div>
@@ -305,7 +308,8 @@
             <div class="row">
                 <div class="col-md-3">
                     <a href="index.html"><img src="img/logo-footer.svg" alt="">
-                    <p>Copyrights © Vocatinest Team 2020</p></a>
+                        <p>Copyrights © Vocatinest Team 2020</p>
+                    </a>
                 </div>
                 <div class="col-md-9">
                     <ul class="nav justify-content-end">
