--- a/detail-pelatihan.html
+++ b/detail-pelatihan.html
@@ -25,8 +25,8 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Beranda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
@@ -34,7 +34,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                     </li>
                 </ul>
@@ -56,10 +56,10 @@
                 </div>
                 <div class="col-6 my-auto">
                     <p class="besar">Menjadi pribadi unggul dalam interview kerja</p>
-                    <p class="abu">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, soluta aliquid animi corporis nostrum asperiores.</p>
+                    <p class="abu">Langkah awall ketika kita tertarik pada suatu lowongan pekerjaan adalah memastikan bahwa kamu sesuai dengan kriteria pekerjaan tersebut.</p>
                     <div class="row">
                         <div class="col-6">
-                            <p class="my-auto round-speaker"><img src="img/detailpelatihan-speaker-round-img.svg" class="mr-2" alt="">Nama Speaker</p>
+                            <p class="my-auto round-speaker"><img src="img/detailpelatihan-speaker-round-img.svg" class="mr-2" alt="">Muhammad Cipta Suhada</p>
                         </div>
                         <div class="col-5 my-auto">
                             <p class="my-auto"><img src="img/star.svg" class="mb-1 mr-2" alt="">4.8 (100k)</p>
@@ -87,7 +87,7 @@
         <div class="row">
             <div class="col-12 mb-3">
                 <p class="besar">Deskripsi Pekerjaan</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
+                <p>Langkah awal ketika kita tertarik pada suatu lowonga pekerjaan adalah memastikan bahwa kamu sesuai dengan kriteria pekerjaan tersebut & mempersiapkan "peralatan tempur" yang sesuai. Berikan kesan pertama yang baik, sehingga kamu bisa menunjukkan kemampuan terbaikmu. Pahami dengan baik tugas dan tanggung jawab posisi, bersikap sopan santun, Jujur berstrategi, Pada akhir wawancara, berikan satu atau dua pertanyaan yang berkualitas kepada pewawancara.</p>
             </div>
 
             <div class="col-12 mb-3">
@@ -107,14 +107,14 @@
 
                 <div class="row mb-4">
                     <div class="col-4 col-md-3">
-                        <img src="img/detailpelatihan-vid.svg" alt="">
+                        <img src="img/detailpelatihan-vid1.svg" alt="">
                     </div>
                     <div class="col-8 col-md-6">
-                        <p class="besar">1. Nama Sub Modul Pelatihan</p>
-                        <p class="kecil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus fugiat, corporis pariatur cumque repudiandae, consequuntur ab maiores. Suscipit error veritatis nobis? Possimus rerum eius odio ipsum dolore. Ipsum, cupiditate, laboriosam.</p>
+                        <p class="besar">1. Mempersiapkan Diri Melamar Sebuah Pekerjaan</p>
+                        <p class="kecil">Langkah awal ketika kita tertarik pada satu lowongan pekerjaan adalah memastikan bahwa kamu sesuai dengan kriteria pekerjaan tersebut & mempersiapkan "peralatan tempur" yang sesuai, Apakah hal tersebut?.</p>
                         <div class="row">
                             <div class="col-4 col-lg-3">
-                                <p class="my-auto"><img src="img/time.svg" class="mb-1 mr-2" alt="">20:04</p>
+                                <p class="my-auto"><img src="img/time.svg" class="mb-1 mr-2" alt="">05:03</p>
                             </div>
                             <div class="col-4 col-lg-3">
                                 <p class="my-auto"><img src="img/star.svg" class="mb-1 mr-2" alt="">4.8 (3.381)</p>
@@ -134,20 +134,74 @@
 
                 <div class="row mb-4">
                     <div class="col-4 col-md-3">
-                        <img src="img/detailpelatihan-vid.svg" alt="">
+                        <img src="img/detailpelatihan-vid2.svg" alt="">
                     </div>
                     <div class="col-8 col-md-6">
-                        <p class="besar">2. Nama Sub Modul Pelatihan</p>
-                        <p class="kecil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus fugiat, corporis pariatur cumque repudiandae, consequuntur ab maiores. Suscipit error veritatis nobis? Possimus rerum eius odio ipsum dolore. Ipsum, cupiditate, laboriosam.</p>
+                        <p class="besar">2. Mempersiapkan Penampilan Ketika Wawancara Kerja</p>
+                        <p class="kecil">Prinsip dari berpakaian saat wawancara kerja adalah untuk menunjukkan keseriusanmu terhadap perusahaan pemberi kerja. Berikan kesan pertama yang baik, sehingga kamu bisa menunjukkan kemampuan terbaikmu.</p>
                         <div class="row">
                             <div class="col-4 col-lg-3">
-                                <p class="my-auto"><img src="img/time.svg" class="mb-1 mr-2" alt="">20:04</p>
+                                <p class="my-auto"><img src="img/time.svg" class="mb-1 mr-2" alt="">02:05</p>
                             </div>
                             <div class="col-4 col-lg-3">
-                                <p class="my-auto"><img src="img/star.svg" class="mb-1 mr-2" alt="">4.8 (3.381)</p>
+                                <p class="my-auto"><img src="img/star.svg" class="mb-1 mr-2" alt="">4.7 (2.472)</p>
                             </div>
                             <div class="col-4 col-lg-3">
-                                <p class="my-auto"><img src="img/account.svg" class="mb-1 mr-2" alt="">1973</p>
+                                <p class="my-auto"><img src="img/account.svg" class="mb-1 mr-2" alt="">1256</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 text-right">
+                        <p class="besar harga"><b>Rp 200.000</b></p>
+                        <p class="coret d-inline mr-3">Rp 700.000</p>
+                        <p class="d-inline">20% OFF</p>
+                        <button class="btn btnghost mt-3">Beli per Modul</button>
+                    </div>
+                </div>
+                
+                <div class="row mb-4">
+                    <div class="col-4 col-md-3">
+                        <img src="img/detailpelatihan-vid3.svg" alt="">
+                    </div>
+                    <div class="col-8 col-md-6">
+                        <p class="besar">3. Dos and Don'ts saat Wawancara Kerja</p>
+                        <p class="kecil">Pahami dengan baik tugas dan tanggung jawab posisi, bersikap sopan santun, jujur berstrategi. Pada akhir wawancara, berikan satu atau dua pertanyaan yang berkualitas kepada pewawancara.</p>
+                        <div class="row">
+                            <div class="col-4 col-lg-3">
+                                <p class="my-auto"><img src="img/time.svg" class="mb-1 mr-2" alt="">05:03</p>
+                            </div>
+                            <div class="col-4 col-lg-3">
+                                <p class="my-auto"><img src="img/star.svg" class="mb-1 mr-2" alt="">4.5 (1.221)</p>
+                            </div>
+                            <div class="col-4 col-lg-3">
+                                <p class="my-auto"><img src="img/account.svg" class="mb-1 mr-2" alt="">2346</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 text-right">
+                        <p class="besar harga"><b>Rp 200.000</b></p>
+                        <p class="coret d-inline mr-3">Rp 700.000</p>
+                        <p class="d-inline">20% OFF</p>
+                        <button class="btn btnghost mt-3">Beli per Modul</button>
+                    </div>
+                </div>
+                
+                <div class="row mb-4">
+                    <div class="col-4 col-md-3">
+                        <img src="img/detailpelatihan-vid4.svg" alt="">
+                    </div>
+                    <div class="col-8 col-md-6">
+                        <p class="besar">4. Negosiasi Gaji</p>
+                        <p class="kecil">Pada sub-modul ini, saya akan membagikan beberapa poin saat mendiskusikan gaji. Ketika kamu sudah sampai di tahapan ini, berarti kamu sudah hampir mencapai proses akhir dari menerimaan kerja. Selamat!</p>
+                        <div class="row">
+                            <div class="col-4 col-lg-3">
+                                <p class="my-auto"><img src="img/time.svg" class="mb-1 mr-2" alt="">02:52</p>
+                            </div>
+                            <div class="col-4 col-lg-3">
+                                <p class="my-auto"><img src="img/star.svg" class="mb-1 mr-2" alt="">4.9 (3.921)</p>
+                            </div>
+                            <div class="col-4 col-lg-3">
+                                <p class="my-auto"><img src="img/account.svg" class="mb-1 mr-2" alt="">9008</p>
                             </div>
                         </div>
                     </div>
