--- a/cari-pelatihan.html
+++ b/cari-pelatihan.html
@@ -25,8 +25,8 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Beranda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
@@ -34,7 +34,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                     </li>
                 </ul>
@@ -50,7 +50,7 @@
     <!-- Cari -->
     <div class="container-fluid row-abu">
         <div class="container cari latihan">
-            <p class="text-center besar"><b>Cari Pelatihannmu Sekarang</b></p>
+            <p class="text-center besar"><b>Cari Pelatihanmu Sekarang</b></p>
             <div class="row mb-4">
                 <div class="col-10">
                     <input class="form-control" placeholder="Pelatihan / Kata Kunci / Kategori">
@@ -96,12 +96,13 @@
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="card pelatihan">
                         <a href="detail-pelatihan.html"><img src="img/header2-card1.svg" class="card-img-top" alt="..."></a>
-                        <div class="card-body">
+                        <div class="card-body pb-0">
                             <a class="kategori" href="detail-pelatihan.html">PENGEMBANGAN DIRI</a>
                             <a href="detail-pelatihan.html"><p class="mb-2"><b>Menjadi pribadi unggul dalam Interview Kerja</b></p></a>
                             <p>Muhammad Cipta Suhaja</p>
                             <p class="abu">Senior Manager, Human Resources, Gojek</p>
-                            <br>
+                        </div>
+                        <div class="card-footer cardf-0">
                             <div class="row">
                                 <div class="col-6 my-auto">
                                     <p class="harga1">Rp 700.000</p>
@@ -137,7 +138,8 @@
                             <p class="mb-2"><b>Berkomunikasi di dunia kerja</b></p>
                             <p>Kartika Anindya Putri</p>
                             <p class="abu">Leadership Development Trainer</p>
-                            <br>
+                        </div>
+                        <div class="card-footer cardf-0">
                             <div class="row">
                                 <div class="col-6 my-auto">
                                     <p class="harga1">Rp 700.000</p>
@@ -173,7 +175,8 @@
                             <p class="mb-2"><b>SAP Database</b></p>
                             <p>Yosef Agung Wicaksono</p>
                             <p class="abu">SAP HCM Analyst, PT XL Axiata Tbk</p>
-                            <br>
+                        </div>
+                        <div class="card-footer cardf-0">
                             <div class="row">
                                 <div class="col-6 my-auto">
                                     <p class="harga1">Rp 700.000</p>
@@ -209,7 +212,8 @@
                             <p class="mb-2"><b>Cloud Database</b></p>
                             <p>Barnabas Simorangkir</p>
                             <p class="abu">Senior Manager, PT Bank CIMB Niaga Tbk</p>
-                            <br>
+                        </div>
+                        <div class="card-footer cardf-0">
                             <div class="row">
                                 <div class="col-6 my-auto">
                                     <p class="harga1">Rp 700.000</p>
@@ -245,7 +249,8 @@
                             <p class="mb-2"><b>Product Management</b></p>
                             <p>Kholifatul Ummah</p>
                             <p class="abu">Growth Product Manager, Moka</p>
-                            <br>
+                        </div>
+                        <div class="card-footer cardf-0">
                             <div class="row">
                                 <div class="col-6 my-auto">
                                     <p class="harga1">Rp 700.000</p>
@@ -281,7 +286,8 @@
                             <p class="mb-2"><b>Project Management</b></p>
                             <p>Diandra Andreansa</p>
                             <p class="abu">Senior Marketer Manager, Traveloka</p>
-                            <br>
+                        </div>
+                        <div class="card-footer cardf-0">
                             <div class="row">
                                 <div class="col-6 my-auto">
                                     <p class="harga1">Rp 700.000</p>
@@ -317,7 +323,8 @@
                             <p class="mb-2"><b>Growth Hacking Strategy</b></p>
                             <p>Windy Natriavi</p>
                             <p class="abu">Chief Operating Officer, Awan Tunai</p>
-                            <br>
+                        </div>
+                        <div class="card-footer cardf-0">
                             <div class="row">
                                 <div class="col-6 my-auto">
                                     <p class="harga1">Rp 700.000</p>
@@ -353,7 +360,8 @@
                             <p class="mb-2"><b>Brand Marketing Management</b></p>
                             <p>Rizal Adhari</p>
                             <p class="abu">Product Manager, Traveloka</p>
-                            <br>
+                        </div>
+                        <div class="card-footer cardf-0">
                             <div class="row">
                                 <div class="col-6 my-auto">
                                     <p class="harga1">Rp 700.000</p>
