--- a/daftar.html
+++ b/daftar.html
@@ -25,8 +25,8 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Beranda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
@@ -51,7 +51,7 @@
     <div class="container-fluid row-putih">
         <div class="container kotak-sign p-5">
             <p class="judul text-center"><b>Daftar</b></p>
-            <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus iusto culpa reiciendis distinctio voluptatibus.</p>
+            <p class="mb-5">Segera daftarkan akun Vocatinestmu dan akses beragam fitur pencarian kerja, pengenalan diri, dan pelatihan.</p>
             <form>
                 <div class="form-group">
                     <label>Nama Lengkap</label>
