--- a/detail-kerja.html
+++ b/detail-kerja.html
@@ -25,13 +25,13 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Beranda<span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Beranda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
                     </li>
                     <li class="nav-item">
@@ -89,11 +89,17 @@
             <div class="row">
                 <div class="col-12 mb-3">
                     <p class="besar">Deskripsi Pekerjaan</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
+                    <p>Research aplikasi android <br>
+                    Pengembangan aplikasi perusahaan <br>
+                    Pengembangan aplikasi website <br>
+                    Maintanance dan support untuk aplikasi yang sudah berjalan</p>
                 </div>
                 <div class="col-12 mb-3">
                     <p class="besar">Persyaratan</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
+                    <p>- Laki maks. 35 tahun <br>
+                    - Pendidikan min. SMK Rekayasa Perangkat Lunah <br>
+                    - Memahami dan mengerti mengenai Excellent in PHP (Native & Laravel Network) and Android Studio, C#.Net / ASP.Net & SQL Server, dan MySQL <br>
+                    - Pengalaman di Bootstrap, JQuery, AJAX, Javascript, HTML, & CSS</p>
                 </div>
                 <div class="col-3">
                     <p class="besar">Level</p>
@@ -110,7 +116,8 @@
             <div class="row">
                 <div class="col-12">
                     <p class="besar">Deskripsi Perusahaan</p>
-                    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia eius nobis dolorum, error nam temporibus ipsum alias quae sequi ullam quaerat minima necessitatibus molestias explicabo ratione ex. Eaque enim nisi laudantium, aspernatur laborum doloremque doloribus, ut quibusdam. Dolore omnis illo doloribus id minus ratione quasi nihil aut odio placeat quibusdam provident iure cum libero, perferendis ex ab eligendi velit, tempora molestiae. Ut minima laboriosam eum.</p>
+                    <p class="mb-0">PT Inet Global Indo (INET) didirikan pada tahun  2005 dan selama lebih dari satu dekade telah mengambil peran dan berkomitmen untuk menjadi penyedia solusi ICT yang terkemuka dan diminati dengan standar global dan unggul. INET menyediakan solusi ICT yang komprehensif, terpadu dan disesuaikan dengan kebutuhan pengguna yang mencakup data infrastruktur, managed service, cloud computing, IT service, serta layanan digital yang fokus untuk memanfaatkan peluang yang mendukung dan menambahkan nilai pada bisnis utama tiap customer. <br><br>
+                    <a href="https://www.inet.id/karir/?preview_id=260">Link: https://www.inet.id/karir/?preview_id=260</a></p>
                 </div>
             </div>
         </div>
