--- a/dashboard-profile.html
+++ b/dashboard-profile.html
@@ -37,10 +37,23 @@
                     <li class="nav-item">
                         <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
                     </li>
+                    <li class="nav-item cart">
+                        <a class="nav-link" href=""><img src="img/nav-shop-cart.svg" alt=""></a>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <a href="masuk.html" class="btn btndefault" type="submit">Masuk</a>&nbsp;&nbsp;
-                    <a href="daftar.html" class="btn btnghost" type="submit">Daftar</a>
+                    <img class="img-fluid" src="img/nav-img-profile.svg" alt="">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Jenri Dewany
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                            </div>
+                        </li>
+                    </ul>
                 </form>
             </div>
         </div>
@@ -48,8 +61,8 @@
     <!-- Navbar -->
 
     <!-- Main -->
-    <div class="container-fluid row-putih dashboard pt-0">
-        <div class="container">
+    <div class="container-fluid row-putih pt-0">
+        <div class="container dashboard">
             <div class="col-12 text-center">
                 <p class="besar">Dashboard Anda</p>
                 <p class="abu">Temukan Beragam Pilihan Pekerjaan Vokasi Sesuai Dengan Bakat dan Minatmu</p>
@@ -58,34 +71,34 @@
                 <div class="row mt-4 justify-content-center">
                     <a href="dashboard-profile.html" class="col-3 btn p-4 mr-4 text-left active">
                         <div class="row">
-                            <div class="col-md-4 col-lg-3 my-auto">
+                            <div class="col-12 col-sm-4 col-lg-3 my-auto">
                                 <img src="img/dashboard-biru-1-active.svg" alt="">
                             </div>
-                            <div class="col-md-8 col-lg-9 my-auto">
+                            <div class="col-12 col-sm-8 col-lg-9 my-auto">
                                 <p class="besar">PROFIL ANDA</p>
                                 <p class="kecil"><b>30%</b> Lengkap</p>
                             </div>
                         </div>
                     </a>
 
-                    <a class="col-3 btn p-4 text-left">
+                    <a href="" class="col-3 btn p-4 text-left">
                         <div class="row">
-                            <div class="col-md-4 col-lg-3 my-auto">
+                            <div class="col-12 col-sm-4 col-lg-3 my-auto">
                                 <img src="img/dashboard-biru-2.svg" alt="">
                             </div>
-                            <div class="col-md-8 col-lg-9 my-auto">
+                            <div class="col-12 col-sm-8 col-lg-9 my-auto">
                                 <p class="besar">PEKERJAAN ANDA</p>
                                 <p class="kecil"><b>4</b> pekerjaan yang sesuai</p>
                             </div>
                         </div>
                     </a>
 
-                    <a class="col-3 btn p-4 ml-4 text-left">
+                    <a href="" class="col-3 btn p-4 ml-4 text-left">
                         <div class="row">
-                            <div class="col-md-4 col-lg-3 my-auto">
+                            <div class="col-12 col-sm-4 col-lg-3 my-auto">
                                 <img src="img/dashboard-biru-3.svg" alt="">
                             </div>
-                            <div class="col-md-8 col-lg-9 my-auto">
+                            <div class="col-12 col-sm-8 col-lg-9 my-auto">
                                 <p class="besar">PELATIHAN ANDA</p>
                                 <p class="kecil"><b>2</b> pelatihan yang diikuti</p>
                             </div>
@@ -96,39 +109,45 @@
 
             <div class="col-12 mt-4 isi">
                 <div class="row">
-                    <div class="col-4 kiri">
-                        <div class="col-12 text-center p-0 mb-5">
-                            <img src="img/dashboard-profile-picture.svg" alt="">
-                        </div>
-                        <div class="col-12 p-0 mb-5">
-                            <p class="besar">Riwayat Pendidikan</p>
-                            <p>Sekolah Menengah Kejuruan</p>
-                            <p>SMK 2 Sleman</p>
-                        </div>
-                        <div class="col-12 p-0 mb-5">
-                            <p class="besar">Lokasi</p>
-                            <p>Daerah Istimewa Yogyakarta</p>
-                        </div>
-                        <div class="col-12 p-0 mb-5">
-                            <p class="besar">Pengalaman Organisasi</p>
-                            <p>OSIS SMK 2 Sleman</p>
-                        </div>
-                        <div class="col-12 p-0">
-                            <p class="besar">Penghargaan & Pencapaian</p>
-                            <p>Siswa Teladan SMK 2 Sleman</p>
+                    <div class="col-12 col-sm-4 kiri">
+                        <div class="row p-2">
+                            <div class="col-12 col-sm-12 text-center p-0 mb-5">
+                                <img src="img/dashboard-profile-picture.svg" alt="">
+                            </div>
+
+                            <div class="col-6 col-sm-12 p-0 mb-5">
+                                <p class="besar">Riwayat Pendidikan</p>
+                                <p>Sekolah Menengah Kejuruan</p>
+                                <p>SMK 2 Sleman</p>
+                            </div>
+
+                            <div class="col-6 col-sm-12 p-0 mb-5">
+                                <p class="besar">Lokasi</p>
+                                <p>Daerah Istimewa Yogyakarta</p>
+                            </div>
+
+                            <div class="col-6 col-sm-12 p-0 mb-5">
+                                <p class="besar">Pengalaman Organisasi</p>
+                                <p>OSIS SMK 2 Sleman</p>
+                            </div>
+
+                            <div class="col-6 col-sm-12 p-0">
+                                <p class="besar">Penghargaan & Pencapaian</p>
+                                <p>Siswa Teladan SMK 2 Sleman</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-8 kanan">
+                    <div class="col-12 col-sm-8 kanan">
                         <div class="col-12 p-0 mb-5">
                             <div class="row">
-                                <div class="col-9">
-                                    <p class="nama"><b>Jenri Dewany</b></p>
+                                <div class="col-9 my-auto">
+                                    <p class="nama mb-0"><b>Jenri Dewany</b></p>
                                 </div>
                                 <div class="col-3 text-right my-auto">
-                                    <a href="edit-profile.html" class="btn btnghost">Edit Profil</a>
+                                    <a href="edit-profile1.html" class="btn btnghost">Edit Profil</a>
                                 </div>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam voluptatum est repellat. Impedit est eaque magnam nobis veniam distinctio accusantium, in repudiandae. Labore rem, doloribus quo porro voluptatum? Deserunt cupiditate reiciendis, enim facilis officia sunt aliquid, omnis perferendis, porro quisquam ipsum. Nam consequatur ex odio quia, eum necessitatibus vitae molestias.</p>
+                            <p class="mt-3">Jenri Dewany merupakan siswi SMK2 Sleman Yogyakarta, Jenri Dewany merupakan siswi yang aktif berorganisasi. Jenri Dewany merupakan siswi yang kreatif dan komunikatif. Saat ini, Jenry Dewany merupakan siswi kelas 11 pada jurusan Teknik Komputer dan Jaringan. Jenri Dewany menyukai pekerjaan sebagai Web Programmer, UI / UX, dan Fullstack Programmer.</p>
                         </div>
 
                         <div class="col-12 p-0 mb-5">
@@ -148,7 +167,7 @@
 
                         <div class="col-12 p-0 mb-5">
                             <div class="row mb-3">
-                                <div class="col-8">
+                                <div class="col-8 my-auto">
                                     <p class="besar">Rekomendasi Pekerjaan Untuk Anda</p>
                                 </div>
                                 <div class="col-4 text-right my-auto">
@@ -160,9 +179,11 @@
                                     <div class="card">
                                         <img src="img/header-card1.svg" class="card-img-top" alt="...">
                                         <div class="card-body pb-0">
-                                            <p class="besar">Web Programmer</p>
-                                            <p class="mb-3">Nama Instansi</p>
-                                            <p>DKI Jakarta</p>
+                                            <p class="besar">Programmer</p>
+                                            <p class="mb-3">PT Inet Global Indo</p>
+                                        </div>
+                                        <div class="card-footer pt-0">
+                                            <p class="mb-0">DKI Jakarta</p>
                                         </div>
                                         <div class="card-footer pt-0">
                                             <a class="btn btn-block mt-3">Daftar Sekarang</a>
@@ -174,9 +195,11 @@
                                     <div class="card">
                                         <img src="img/header-card2.svg" class="card-img-top" alt="...">
                                         <div class="card-body pb-0">
-                                            <p class="besar">Web Programmer</p>
-                                            <p class="mb-3">Nama Instansi</p>
-                                            <p>DKI Jakarta</p>
+                                            <p class="besar">Technical Support</p>
+                                            <p class="mb-3">Varnion Teknologi Semesta</p>
+                                        </div>
+                                        <div class="card-footer pt-0">
+                                            <p class="mb-0">Bali</p>
                                         </div>
                                         <div class="card-footer pt-0">
                                             <a class="btn btn-block mt-3">Daftar Sekarang</a>
@@ -190,7 +213,9 @@
                                         <div class="card-body pb-0">
                                             <p class="besar">System Developer</p>
                                             <p class="mb-3">Lattice Teknologi Mandiri</p>
-                                            <p>Jawa Barat</p>
+                                        </div>
+                                        <div class="card-footer pt-0">
+                                            <p class="mb-0">Jawa Barat</p>
                                         </div>
                                         <div class="card-footer pt-0">
                                             <a class="btn btn-block mt-3">Daftar Sekarang</a>
@@ -258,7 +283,9 @@
                                     <p>SMK</p>
                                 </div>
                                 <div class="col-3 my-auto my-auto">
-                                    <p class="sertif"><img src="img/download-icon.svg" alt="">Ijazah/Sertifikat</p>
+                                    <a href="">
+                                        <p class="sertif"><img src="img/download-icon.svg" alt="">Ijazah/Sertifikat</p>
+                                    </a>
                                 </div>
                                 <div class="col-3 my-auto">
                                     <p>2019 - Sekarang</p>
@@ -273,7 +300,9 @@
                                     <p>SMP</p>
                                 </div>
                                 <div class="col-3 my-auto my-auto">
-                                    <p class="sertif"><img src="img/download-icon.svg" alt="">Ijazah/Sertifikat</p>
+                                    <a href="">
+                                        <p class="sertif"><img src="img/download-icon.svg" alt="">Ijazah/Sertifikat</p>
+                                    </a>
                                 </div>
                                 <div class="col-3 my-auto">
                                     <p>2016 - 2019</p>
@@ -288,7 +317,9 @@
                                     <p>SD</p>
                                 </div>
                                 <div class="col-3 my-auto my-auto">
-                                    <p class="sertif"><img src="img/download-icon.svg" alt="">Ijazah/Sertifikat</p>
+                                    <a href="">
+                                        <p class="sertif"><img src="img/download-icon.svg" alt="">Ijazah/Sertifikat</p>
+                                    </a>
                                 </div>
                                 <div class="col-3 my-auto">
                                     <p>2010 - 2016</p>
