--- a/dashboard-pelatihan.html
+++ b/dashboard-pelatihan.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -61,7 +62,7 @@
     <!-- Navbar -->
 
     <!-- Main -->
-    <div class="container-fluid row-putih pt-0 pb-0">
+    <div class="container-fluid row-putih pt-0 pb-0 mb-5">
         <div class="container dashboard mb-5">
             <div class="col-12 text-center">
                 <p class="besar">Dashboard Anda</p>
@@ -69,10 +70,10 @@
             </div>
             <div class="col-12 top">
                 <div class="row mt-4 justify-content-center">
-                    <a href="dashboard-profile.html" class="col-3 btn p-4 mr-4 text-left active">
+                    <a href="dashboard-profile.html" class="col-3 btn p-4 mr-4 text-left">
                         <div class="row">
                             <div class="col-12 col-sm-4 col-lg-3 my-auto">
-                                <img src="img/dashboard-biru-1-active.svg" alt="">
+                                <img src="img/dashboard-biru-1.svg" alt="">
                             </div>
                             <div class="col-12 col-sm-8 col-lg-9 my-auto">
                                 <p class="besar">PROFIL ANDA</p>
@@ -93,10 +94,10 @@
                         </div>
                     </a>
 
-                    <a href="dashboard-pelatihan.html" class="col-3 btn p-4 ml-4 text-left">
+                    <a href="dashboard-pelatihan.html" class="col-3 btn p-4 ml-4 text-left active">
                         <div class="row">
                             <div class="col-12 col-sm-4 col-lg-3 my-auto">
-                                <img src="img/dashboard-biru-3.svg" alt="">
+                                <img src="img/dashboard-biru-3-active.svg" alt="">
                             </div>
                             <div class="col-12 col-sm-8 col-lg-9 my-auto">
                                 <p class="besar">PELATIHAN ANDA</p>
@@ -107,67 +108,40 @@
                 </div>
             </div>
         </div>
-
-        <div class="container edit-atas dashboard mb-5">
-            <p class="besar text-center">Info Pekerjaan</p>
-            <p class="abu text-center">Isi data dengan benar agar kami dapat mencari pekerjaan yang cocok untuk Anda</p>
-            <div class="row">
-                <div class="col-12 angka text-center">
-                    <button class="btn disabled"><b>1</b></button>
-                    <button class="btn disabled"><b>2</b></button>
-                    <button class="btn active"><b>3</b></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="container form-profile px-5 py-2 mb-3">
-            <div class="row">
-                <div class="col-6">
-                    <p class="judul"><b>Pertanyaan</b></p>
-                </div>
-                <div class="col-6 text-right">
-                    <p class="judul"><b class="biru">15</b><b class="abu">/15</b></p>
-                </div>
-            </div>
-            <form>
-                <div class="form-group">
-                    <label>Ketika ada konflik, saya merasa keterampilan komunikasi saya perlu ditingkatkan terutama dalam mencari solusi dan menyelesaikan masalah.</label>
-                    <div class="form-check my-auto">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                        <label class="form-check-label" for="exampleRadios1">
-                            Tidak Sama Sekali
-                        </label>
-                    </div>
-                    <div class="form-check my-auto">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                        <label class="form-check-label" for="exampleRadios2">
-                            Jarang
-                        </label>
-                    </div>
-                    <div class="form-check my-auto">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
-                        <label class="form-check-label" for="exampleRadios3">
-                            Kadang-kadang
-                        </label>
-                    </div>
-                    <div class="form-check my-auto">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4" value="option4">
-                        <label class="form-check-label" for="exampleRadios4">
-                            Sering
-                        </label>
-                    </div>
-                    <div class="form-check my-auto">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios5" value="option5">
-                        <label class="form-check-label" for="exampleRadios5">
-                            Tidak sama sekali
-                        </label>
-                    </div>
-                </div>
-            </form>
-        </div>
         
-        <div class="col-12 text-center my-4">
-            <a href="dashboard-profile.html" class="btn btndefault btnedit justify-content-center px-5">Selesai</a>
+        <div class="container detailpelatihan-isi dashboard-pelatihan">
+            <div class="col-12">
+                <p class="besar my-3">Sub Modul</p>
+            </div>
+            
+            <div class="col-12 sub-modul">
+                <div class="row mb-4">
+                    <div class="col-4 col-md-3">
+                        <img src="img/detailpelatihan-vid1.svg" alt="">
+                    </div>
+                    <div class="col-8 col-md-6">
+                        <p class="besar">Menjadi Pribadi Unggul Dalam Mempersiapkan Kerja</p>
+                        <p class="kecil">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis qui animi porro cupiditate, labore, fugiat et? Tempora, eligendi dicta quidem, hic, accusamus, aperiam consequuntur neque repellendus natus recusandae vero eaque.</p>
+                        <div class="row">
+                            <div class="col-4 col-lg-5 my-auto">
+                                <p class="my-auto"><img src="img/detailpelatihan-speaker-round-img.svg" class="mb-1 mr-2 speaker-pic" alt="">Nama Speaker</p>
+                            </div>
+                            <div class="col-4 col-lg-3 my-auto">
+                                <p class="my-auto"><img src="img/time.svg" class="mb-1 mr-2" alt="">05:03</p>
+                            </div>
+                            <div class="col-4 col-lg-3 my-auto">
+                                <p class="my-auto"><img src="img/star.svg" class="mb-1 mr-2" alt="">4.8 (3.381)</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3 text-right">
+                        <p class="angka"><b>1</b><b class="abu">/4</b></p>
+                        <p class="d-inline">Modul terselesaikan</p>
+                        <button class="btn btndefault mt-3">Detail Pelatihan</button>
+                    </div>
+                </div>
+                <div class="garis-abu my-3"></div>
+            </div>
         </div>
     </div>
     <!-- Main -->
