--- a/dashboard-profile.html
+++ b/dashboard-profile.html
@@ -81,7 +81,7 @@
                         </div>
                     </a>
 
-                    <a href="" class="col-3 btn p-4 text-left">
+                    <a href="dashboard-pekerjaan.html" class="col-3 btn p-4 text-left">
                         <div class="row">
                             <div class="col-12 col-sm-4 col-lg-3 my-auto">
                                 <img src="img/dashboard-biru-2.svg" alt="">
@@ -93,7 +93,7 @@
                         </div>
                     </a>
 
-                    <a href="" class="col-3 btn p-4 ml-4 text-left">
+                    <a href="dashboard-pelatihan.html" class="col-3 btn p-4 ml-4 text-left">
                         <div class="row">
                             <div class="col-12 col-sm-4 col-lg-3 my-auto">
                                 <img src="img/dashboard-biru-3.svg" alt="">
